--- a/backend/src/pdf/Invoice.pug
+++ b/backend/src/pdf/Invoice.pug
@@ -324,6 +324,8 @@ html
       footer.footer-invoice
         if model.notes
           p #{model.notes}
+        if summary
+          p #{translate('Notes Summary')}: #{summary}
           
 
    
